--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -22,7 +22,7 @@ on:
         required: false
         description: Application level log blowup
         default: 2
-      leaf_log_blowup:
+      agg_log_blowup:
         type: number
         required: false
         description: Aggregation (leaf) level log blowup
@@ -46,6 +46,11 @@ on:
         type: boolean
         required: true
         description: Whether to run the e2e benchmark
+      profiling:
+        type: boolean
+        required: false
+        description: Profiling mode
+        default: false
   workflow_call:
     inputs:
       benchmark_name:
@@ -71,7 +76,7 @@ on:
         required: false
         description: Application level log blowup
         default: 2
-      leaf_log_blowup:
+      agg_log_blowup:
         type: number
         required: false
         description: Aggregation (leaf) level log blowup
@@ -95,11 +100,15 @@ on:
         type: boolean
         required: true
         description: Whether to run the e2e benchmark
+      profiling:
+        type: boolean
+        required: false
+        description: Profiling mode
+        default: false
 
 env:
   S3_METRICS_PATH: s3://openvm-public-data-sandbox-us-east-1/benchmark/github/metrics
   FEATURE_FLAGS: "bench-metrics,parallel,nightly-features"
-  CMD_ARGS: ""
   INPUT_ARGS: ""
   CARGO_NET_GIT_FETCH_WITH_CLI: "true"
 
@@ -136,11 +145,18 @@ jobs:
 
       - name: Display workflow inputs
         run: echo "${{ toJSON(inputs) }}"
+      - name: "Feature flags: memory allocator"
+        run: |
+          echo "FEATURE_FLAGS=${FEATURE_FLAGS},${{ github.event.inputs.memory_allocator }}" >> $GITHUB_ENV
       - name: "Feature flags: aggregation"
         if: contains(github.event.pull_request.labels.*.name, 'run-benchmark') || (github.event_name == 'push' && github.ref == 'refs/heads/main')
         run: |
           echo "Adding aggregation feature flag"
           echo "FEATURE_FLAGS=${FEATURE_FLAGS},aggregation" >> $GITHUB_ENV
+      - name: "Feature flags: profiling"
+        if: github.event.inputs.profiling
+        run: |
+          echo "FEATURE_FLAGS=${FEATURE_FLAGS},profiling" >> $GITHUB_ENV
 
       - name: Setup e2e (halo2 and arguments)
         run: |
@@ -155,10 +171,8 @@ jobs:
             export PARAMS_DIR=$(pwd)/params
           fi
 
-      - name: Set BIN_NAME and CMD_ARGS
+      - name: Set BIN_NAME
         run: |
-          CMD_ARGS="--features ${FEATURE_FLAGS}"
-          echo "CMD_ARGS=${CMD_ARGS}" >> $GITHUB_ENV
           echo "BIN_NAME=${{ inputs.benchmark_name }}" >> $GITHUB_ENV
 
       - name: Set working directory
@@ -184,13 +198,12 @@ jobs:
 
       - name: Set input args
         run: |
-          INSTANCE_TYPE="--instance_type ${{ inputs.instance_type }}"
-          MEMORY_ALLOCATOR="--memory_allocator ${{ inputs.memory_allocator }}"
+          FEATURES="--features $FEATURE_FLAGS"
           APP_ARG="--app_log_blowup ${{ inputs.app_log_blowup }}"
-          AGG_ARG="--leaf_log_blowup ${{ inputs.leaf_log_blowup }}"
+          AGG_ARG="--agg_log_blowup ${{ inputs.agg_log_blowup }}"
           MAX_SEGMENT_LENGTH="--max_segment_length ${{ inputs.max_segment_length }}"
           OUTPUT_PATH="--output_path $METRIC_PATH"
-          echo "INPUT_ARGS=${INSTANCE_TYPE} ${MEMORY_ALLOCATOR} ${APP_ARG} ${AGG_ARG} ${MAX_SEGMENT_LENGTH} ${OUTPUT_PATH} ${INPUT_ARGS}" >> $GITHUB_ENV
+          echo "INPUT_ARGS=${FEATURES} ${APP_ARG} ${AGG_ARG} ${MAX_SEGMENT_LENGTH} ${OUTPUT_PATH} ${INPUT_ARGS}" >> $GITHUB_ENV
 
       ##########################################################################
       # Find working directory based on benchmark_name and run the benchmark   #
@@ -198,7 +211,7 @@ jobs:
       - name: Run benchmark
         working-directory: ${{ steps.set-working-dir.outputs.working_dir }}
         run: |
-          python3 ${{ steps.set-working-dir.outputs.relative_path }}/ci/scripts/bench.py $BIN_NAME $CMD_ARGS $INPUT_ARGS
+          python3 ${{ steps.set-working-dir.outputs.relative_path }}/ci/scripts/bench.py $BIN_NAME $INPUT_ARGS
 
       ##########################################################################
       # Store metric json file to S3                                           #
