--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -102,7 +102,7 @@ jobs:
                 instance_type: .instance_type,
                 memory_allocator: .memory_allocator,
                 app_log_blowup: .app_log_blowup,
-                agg_log_blowup: .agg_log_blowup,
+                leaf_log_blowup: .leaf_log_blowup,
                 root_log_blowup: (.root_log_blowup // 0),
                 internal_log_blowup: (.internal_log_blowup // 0),
                 max_segment_length: (.max_segment_length // 1048476)
@@ -127,7 +127,7 @@ jobs:
       instance_type: ${{ matrix.benchmark_run.instance_type }}
       memory_allocator: ${{ matrix.benchmark_run.memory_allocator }}
       app_log_blowup: ${{ matrix.benchmark_run.app_log_blowup }}
-      agg_log_blowup: ${{ matrix.benchmark_run.agg_log_blowup }}
+      leaf_log_blowup: ${{ matrix.benchmark_run.leaf_log_blowup }}
       root_log_blowup: ${{ matrix.benchmark_run.root_log_blowup }}
       internal_log_blowup: ${{ matrix.benchmark_run.internal_log_blowup }}
       max_segment_length: ${{ matrix.benchmark_run.max_segment_length }}
