--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -52,6 +52,7 @@ jobs:
           cargo nextest run --cargo-profile=fast
 
       - name: Run ${{ matrix.extension.name }} integration tests
+        if: hashFiles(format('extensions/{0}/tests', matrix.extension.path)) != ''
         working-directory: extensions/${{ matrix.extension.path }}/tests
         run: |
           rustup component add rust-src --toolchain nightly-2024-10-30
