--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -132,6 +132,7 @@ jobs:
       internal_log_blowup: ${{ matrix.benchmark_run.internal_log_blowup }}
       max_segment_length: ${{ matrix.benchmark_run.max_segment_length }}
       e2e_bench: ${{ matrix.benchmark_run.e2e_bench }}
+      features: ${{ matrix.benchmark_run.features }}
     secrets: inherit
 
   summarize:
