--- a/extensions/native/guest-macro/Cargo.toml
+++ b/extensions/native/guest-macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "openvm-edsl-kernel"
+name = "openvm-native-guest-macro"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
