--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -56,9 +56,11 @@ jobs:
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=8cpu-linux-x64
+      - extras=s3-cache
     outputs:
       matrix: ${{ steps.create-matrix.outputs.matrix }}
     steps:
+      - uses: runs-on/action@v1
       - uses: actions/checkout@v4
         with:
           ref: ${{ env.CURRENT_SHA }}
