--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -44,8 +44,8 @@ metrics.workspace = true
 tracing.workspace = true
 itertools.workspace = true
 getset.workspace = true
-prometheus-client.workspace = true
-sysinfo.workspace = true
+prometheus-client = "0.22.3"
+sysinfo = "0.33.0"
 once_cell = "1.20.2"
 
 [features]
