--- a/extensions/native/guest-macro/test/program/kernel/Cargo.toml
+++ b/extensions/native/guest-macro/test/program/kernel/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-openvm-native-compiler = { path = "../../../../extensions/native/compiler" }
-openvm-native-serialization = { path = "../../../../extensions/native/serialization" }
-openvm-instructions = { path = "../../../../crates/toolchain/instructions" }
+openvm-native-compiler = { path = "../../../../compiler" }
+openvm-native-serialization = { path = "../../../../serialization" }
+openvm-instructions = { path = "../../../../../../crates/toolchain/instructions" }
 openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", rev = "c785515", default-features = false }
 openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", rev = "c785515", default-features = false }
 
