--- a/extensions/native/guest-macro/test/program/Cargo.toml
+++ b/extensions/native/guest-macro/test/program/Cargo.toml
@@ -11,3 +11,10 @@ openvm-native-guest-macro = { path = "../.." }
 [features]
 default = []
 std = ["openvm/std"]
+
+[build-dependencies]
+openvm-native-compiler = { path = "../../../compiler" }
+openvm-native-serialization = { path = "../../../serialization" }
+openvm-instructions = { path = "../../../../../crates/toolchain/instructions" }
+openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", rev = "c785515", default-features = false }
+openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", rev = "c785515", default-features = false }
