--- a/examples/algebra/Cargo.toml
+++ b/examples/algebra/Cargo.toml
@@ -12,6 +12,7 @@ openvm-platform = { git = "https://github.com/openvm-org/openvm.git" }
 openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git" }
 openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git" }
 serde = { version = "1.0.216", default-features = false }
+num-bigint = { version = "0.4.6", default-features = false, features = ["serde"] }
 
 [features]
 default = []
