--- a/extensions/algebra/tests/programs/Cargo.toml
+++ b/extensions/algebra/tests/programs/Cargo.toml
@@ -9,7 +9,7 @@ openvm = { path = "../../../../crates/toolchain/openvm" }
 openvm-platform = { path = "../../../../crates/toolchain/platform" }
 
 openvm-algebra-guest = { path = "../../guest" }
-openvm-algebra-moduli-setup = { path = "../../moduli-setup", default-features = false }
+openvm-algebra-moduli-macros = { path = "../../moduli-macros", default-features = false }
 openvm-algebra-complex-macros = { path = "../../guest/src/field/complex-macros", default-features = false }
 num-bigint = { version = "0.4", default-features = false }
 serde = { version = "1.0", default-features = false, features = [
