--- a/examples/pairing/Cargo.toml
+++ b/examples/pairing/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2021"
 members = []
 
 [dependencies]
-openvm = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-platform = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-algebra-moduli-macros = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", features = ["bls12_381"] }
+openvm = { path = "../../crates/toolchain/openvm" }
+openvm-platform = { path = "../../crates/toolchain/platform" }
+openvm-algebra-guest = { path = "../../extensions/algebra/guest" }
+openvm-algebra-moduli-macros = { path = "../../extensions/algebra/moduli-macros" }
+openvm-algebra-complex-macros = { path = "../../extensions/algebra/complex-macros" }
+openvm-ecc-guest = { path = "../../extensions/ecc/guest" }
+openvm-pairing-guest = { path = "../../extensions/pairing/guest", features = ["bls12_381"] }
 hex-literal = { version = "0.4.1", default-features = false }
 
 [features]
