--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,8 @@ members = [
     "extensions/ecc/circuit",
     "extensions/ecc/transpiler",
     "extensions/ecc/guest",
-    "extensions/ecc/sw-macros",
+    "extensions/ecc/sw-setup",
+    "extensions/ecc/te-setup",
     "extensions/ecc/tests",
     "extensions/pairing/circuit",
     "extensions/pairing/guest",
@@ -161,7 +162,8 @@ openvm-algebra-complex-macros = { path = "extensions/algebra/complex-macros", de
 openvm-ecc-circuit = { path = "extensions/ecc/circuit", default-features = false }
 openvm-ecc-transpiler = { path = "extensions/ecc/transpiler", default-features = false }
 openvm-ecc-guest = { path = "extensions/ecc/guest", default-features = false }
-openvm-ecc-sw-macros = { path = "extensions/ecc/sw-macros", default-features = false }
+openvm-ecc-sw-setup = { path = "extensions/ecc/sw-setup", default-features = false }
+openvm-ecc-te-setup = { path = "extensions/ecc/te-setup", default-features = false }
 openvm-pairing-circuit = { path = "extensions/pairing/circuit", default-features = false }
 openvm-pairing-transpiler = { path = "extensions/pairing/transpiler", default-features = false }
 openvm-pairing-guest = { path = "extensions/pairing/guest", default-features = false }
@@ -241,6 +243,7 @@ k256 = { version = "0.13.4", default-features = false }
 elliptic-curve = { version = "0.13.8", default-features = false }
 ecdsa-core = { version = "0.16.9", package = "ecdsa", default-features = false }
 num-bigint = { version = "0.4.6", default-features = false }
+num-bigint-dig = { version = "0.8.4", default-features = false }
 num-integer = { version = "0.1.46", default-features = false }
 num-traits = { version = "0.2.19", default-features = false }
 ff = { version = "0.13.1", default-features = false }
