--- a/examples/ecc/Cargo.toml
+++ b/examples/ecc/Cargo.toml
@@ -14,6 +14,7 @@ openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git" }
 openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git" }
 openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256" }
 hex-literal = { version = "0.4.1", default-features = false }
+serde = { version = "1.0", default-features = false, features = [ "derive" ] }
 
 [features]
 default = []
