--- a/extensions/pairing/tests/Cargo.toml
+++ b/extensions/pairing/tests/Cargo.toml
@@ -21,12 +21,14 @@ openvm-pairing-transpiler.workspace = true
 openvm-pairing-guest.workspace = true
 openvm-ecc-circuit.workspace = true
 openvm-ecc-guest.workspace = true
+openvm-ecc-transpiler.workspace = true
 openvm-rv32im-transpiler.workspace = true
 openvm-platform = { workspace = true }
 openvm = { workspace = true }
 openvm-toolchain-tests = { workspace = true }
 eyre.workspace = true
 rand.workspace = true
+num-bigint.workspace = true
 
 [features]
 default = ["parallel"]
