chore: add back to workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ members = [
     "extensions/native/recursion",
     "extensions/native/transpiler",
     "extensions/native/tests",
+    "extensions/native/tests/guest-macro",
     "extensions/algebra/circuit",
     "extensions/algebra/transpiler",
     "extensions/algebra/guest",
