perf: Background worker to build OfflineMemory

--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -20,6 +20,7 @@ openvm-instructions = { workspace = true }
 openvm-stark-sdk = { workspace = true, optional = true }
 
 bitcode.workspace = true
+crossbeam-channel.workspace = true
 itertools.workspace = true
 tracing.workspace = true
 derive-new.workspace = true
