--- a/Cargo.toml
+++ b/Cargo.toml
@@ -200,6 +200,7 @@ bon = "3.2.0"
 serde_json = "1.0.117"
 serde_with = "3.11.0"
 clap = "4.5.23"
+crossbeam-channel = "0.5.14"
 toml = "0.8.14"
 lazy_static = "1.5.0"
 once_cell = "1.19.0"
