fix issues introduced after rebase

--- a/extensions/ecc/te-macros/Cargo.toml
+++ b/extensions/ecc/te-macros/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "openvm-ecc-te-setup"
+name = "openvm-ecc-te-macros"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
