--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,8 +57,8 @@ members = [
     "extensions/ecc/circuit",
     "extensions/ecc/transpiler",
     "extensions/ecc/guest",
-    "extensions/ecc/sw-setup",
-    "extensions/ecc/te-setup",
+    "extensions/ecc/sw-macros",
+    "extensions/ecc/te-macros",
     "extensions/ecc/tests",
     "extensions/pairing/circuit",
     "extensions/pairing/guest",
@@ -162,8 +162,8 @@ openvm-algebra-complex-macros = { path = "extensions/algebra/complex-macros", de
 openvm-ecc-circuit = { path = "extensions/ecc/circuit", default-features = false }
 openvm-ecc-transpiler = { path = "extensions/ecc/transpiler", default-features = false }
 openvm-ecc-guest = { path = "extensions/ecc/guest", default-features = false }
-openvm-ecc-sw-setup = { path = "extensions/ecc/sw-setup", default-features = false }
-openvm-ecc-te-setup = { path = "extensions/ecc/te-setup", default-features = false }
+openvm-ecc-sw-macros = { path = "extensions/ecc/sw-macros", default-features = false }
+openvm-ecc-te-macros = { path = "extensions/ecc/te-macros", default-features = false }
 openvm-pairing-circuit = { path = "extensions/pairing/circuit", default-features = false }
 openvm-pairing-transpiler = { path = "extensions/pairing/transpiler", default-features = false }
 openvm-pairing-guest = { path = "extensions/pairing/guest", default-features = false }
