--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -55,7 +55,7 @@ toml = { workspace = true }
 [features]
 default = ["parallel", "mimalloc"]
 bench-metrics = ["openvm-sdk/bench-metrics"]
-parallel = ["openvm-circuit/parallel"]
+parallel = ["openvm-circuit/parallel", "openvm-sdk/parallel"]
 mimalloc = ["openvm-circuit/mimalloc"]
 jemalloc = ["openvm-circuit/jemalloc"]
 jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
