--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -28,6 +28,7 @@ enum_dispatch.workspace = true
 backtrace.workspace = true
 rand.workspace = true
 serde.workspace = true
+serde_with.workspace = true
 serde-big-array.workspace = true
 toml.workspace = true
 once_cell.workspace = true
@@ -41,6 +42,7 @@ derivative.workspace = true
 static_assertions.workspace = true
 async-trait.workspace = true
 getset.workspace = true
+smallvec.workspace = true
 rayon = { workspace = true, optional = true }
 
 [dev-dependencies]
