--- a/Cargo.toml
+++ b/Cargo.toml
@@ -113,6 +113,7 @@ cargo-openvm = { path = "crates/cli", default-features = false }
 openvm-mod-circuit-builder = { path = "crates/circuits/mod-builder", default-features = false }
 openvm-poseidon2-air = { path = "crates/circuits/poseidon2-air", default-features = false }
 openvm-sha256-air = { path = "crates/circuits/sha256-air", default-features = false }
+openvm-sha-macros = { path = "crates/circuits/sha-macros", default-features = false }
 openvm-circuit-primitives = { path = "crates/circuits/primitives", default-features = false }
 openvm-circuit-primitives-derive = { path = "crates/circuits/primitives/derive", default-features = false }
 openvm = { path = "crates/toolchain/openvm", default-features = false }
