--- a/Cargo.toml
+++ b/Cargo.toml
@@ -228,6 +228,7 @@ rrs-lib = "0.1.0"
 rand = { version = "0.8.5", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 serde-big-array = "0.5.1"
+crossbeam = "0.8.4"
 
 # default-features = false for no_std for use in guest programs
 itertools = { version = "0.13.0", default-features = false }
