--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -7,6 +7,9 @@ edition.workspace = true
 homepage.workspace = true
 repository.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 p3-symmetric = { workspace = true }
 p3-baby-bear = { workspace = true }
