--- a/crates/vm/derive/Cargo.toml
+++ b/crates/vm/derive/Cargo.toml
@@ -6,6 +6,9 @@ authors.workspace = true
 description = "Procedural macros for OpenVM circuits."
 license.workspace = true
 
+[lints]
+workspace = true
+
 [lib]
 proc-macro = true
 
