Updated sha256 air to use sha-macros (ColsRef structs)

--- a/crates/circuits/sha256-air/Cargo.toml
+++ b/crates/circuits/sha256-air/Cargo.toml
@@ -9,6 +9,8 @@ openvm-circuit-primitives = { workspace = true }
 openvm-stark-backend = { workspace = true }
 sha2 = { version = "0.10", features = ["compress"] }
 rand.workspace = true
+openvm-sha-macros = { workspace = true }
+ndarray = "0.16"
 
 [dev-dependencies]
 openvm-stark-sdk = { workspace = true }
