--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -20,15 +20,16 @@ jobs:
     steps:
       - uses: runs-on/action@v1
       - uses: actions/checkout@v4
+
+      - uses: codespell-project/actions-codespell@v2
+        with:
+          skip: Cargo.lock,./book/pnpm-lock.yaml,*.txt,./crates/toolchain/openvm/src/memcpy.s,./crates/toolchain/openvm/src/memset.s,
+          ignore_words_file: .codespellignore
+
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
-
-      - uses: codespell-project/actions-codespell@v2
-        with:
-          skip: Cargo.lock,*.txt,./crates/toolchain/openvm/src/memcpy.s,./crates/toolchain/openvm/src/memset.s
-          ignore_words_file: .codespellignore
 
       - name: Generate docs
         run: |
