--- a/.github/workflows/primitives.yml
+++ b/.github/workflows/primitives.yml
@@ -8,7 +8,7 @@ on:
     paths:
       - "crates/circuits/primitives/**"
       - "crates/circuits/poseidon2-air/**"
-      - "crates/circuits/sha256-air/**"
+      - "crates/circuits/sha-air/**"
       - "Cargo.toml"
 
 concurrency:
@@ -45,7 +45,7 @@ jobs:
         run: |
           cargo nextest run --cargo-profile fast --features parallel
 
-      - name: Run tests for sha256-air
-        working-directory: crates/circuits/sha256-air
+      - name: Run tests for sha-air
+        working-directory: crates/circuits/sha-air
         run: |
           cargo nextest run --cargo-profile fast --features parallel
