--- a/crates/circuits/sha-air/Cargo.toml
+++ b/crates/circuits/sha-air/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "openvm-sha256-air"
+name = "openvm-sha-air"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
