--- a/crates/circuits/sha-macros/Cargo.toml
+++ b/crates/circuits/sha-macros/Cargo.toml
@@ -14,7 +14,7 @@ itertools = "0.14"
 proc-macro2 = "1.0"
 
 [dev-dependencies]
-openvm-sha256-air = { workspace = true }
+openvm-sha-air = { workspace = true }
 ndarray = "0.16"
 
 [lib]
