--- a/examples/sha256/Cargo.toml
+++ b/examples/sha256/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 members = []
 
 [dependencies]
-openvm = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-platform = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-sha256-guest = { git = "https://github.com/openvm-org/openvm.git" }
+openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
+openvm-platform = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
+openvm-sha256-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 
 [features]
