--- a/examples/u256/Cargo.toml
+++ b/examples/u256/Cargo.toml
@@ -7,13 +7,10 @@ edition = "2021"
 members = []
 
 [dependencies]
-openvm = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-platform = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-bigint-guest = { git = "https://github.com/openvm-org/openvm.git" }
+openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
+openvm-platform = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
+openvm-bigint-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
 
 [features]
 default = []
-std = [
-    "openvm/std",
-    "openvm-bigint-guest/std",
-]
+std = ["openvm/std", "openvm-bigint-guest/std"]
