--- a/crates/circuits/sha-macros/Cargo.toml
+++ b/crates/circuits/sha-macros/Cargo.toml
@@ -14,7 +14,8 @@ proc-macro2 = "1.0"
 
 [dev-dependencies]
 openvm-sha-air = { workspace = true }
-ndarray = "0.16"
+openvm-circuit-primitives-derive = { workspace = true }
+ndarray.workspace = true
 
 [lib]
 proc-macro = true
