--- a/Cargo.toml
+++ b/Cargo.toml
@@ -225,6 +225,8 @@ static_assertions = "1.1.0"
 async-trait = "0.1.83"
 getset = "0.1.3"
 rrs-lib = "0.1.0"
+bytes = "1.9.0"
+serde_bytes = "0.11.15"
 rand = { version = "0.8.5", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 serde-big-array = "0.5.1"
