--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,7 +62,7 @@ members = [
     "extensions/pairing/circuit",
     "extensions/pairing/transpiler",
     "extensions/pairing/guest",
-    "extensions/pairing/tests",
+    "extensions/pairing/tests", "crates/functional/compiler",
 ]
 exclude = ["crates/sdk/example"]
 resolver = "2"
