Rename EvmProof/EvmOpenvmProof & limit instances to 1 column

--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -46,7 +46,7 @@ tracing.workspace = true
 itertools.workspace = true
 getset.workspace = true
 clap = { workspace = true, features = ["derive"] }
-serde-big-array.workspace = true
+serde_with = { workspace = true, features = ["hex"] }
 
 [features]
 default = ["parallel"]
