--- a/benchmarks/programs/revm_transfer/Cargo.toml
+++ b/benchmarks/programs/revm_transfer/Cargo.toml
@@ -12,6 +12,10 @@ tracing = { version = "0.1.40", default-features = false }
 alloy-primitives = { version = "0.8.10", default-features = false, features = [
     "native-keccak",
 ] } # revm does not re-export this feature so we enable it here
+derive_more = { version = "1.0.0", default-features = false, features = [
+    "from",
+    "display",
+] }
 
 [features]
 default = []
